# img-html-to-pdf-and-merge

./: ImageToPDF.spec  QWEN.md  README.md  build.py  i18n.en.json  i18n.vi.json  launch.bat  launch.py  pyproject.toml  qtfluent-guide-final.md  requirements.txt  run.py  test_html_merge.py
src/img_to_pdf/: __main__.py
src/img_to_pdf/core/: config_manager.py  html_to_pdf_converter.py  language_manager.py  theme_manager.py
src/img_to_pdf/gui/: icons.py  main_window.py
src/img_to_pdf/gui/interfaces/: home_interface.py  settings_interface.py
src/img_to_pdf/utils/: drop_list_widget.py
